--- a/src/app/pages/projects/create/evaluation/follow/follow.component.scss
+++ b/src/app/pages/projects/create/evaluation/follow/follow.component.scss
@@ -25,11 +25,11 @@
 :host ::ng-deep .ck-editor__editable_inline {
     min-height: 140px !important;
 }
-
+/*
 .mat-header-cell {
     background: #E9EbEc !important;
 }
 
 .mdc-data-table__header-row{
     background: #E9EbEc !important;
-}
+}*/
