--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.scss
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.scss
@@ -29,3 +29,8 @@
 .texto-check{
     color: #fff !important;
 }
+
+.text-bg-no-evaluado{
+    color: #fff !important;
+    background-color: #878A99;
+}
