--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -116,9 +116,9 @@
                           </div>
                         </ng-template>
                     </li>
-                    <!--<li [ngbNavItem]="2">
+                    <li [ngbNavItem]="2">
                         <a ngbNavLink>
-                          Evaluaciones
+                          Control
                         </a>
                         <ng-template ngbNavContent>
                           <div class="row">
@@ -126,9 +126,7 @@
                                 
                                 <div class="row g-4 mb-3">
                                     <div class="col-sm">
-                                        <div>
-                                            <button type="button" class="btn btn-success btn-label waves-effect left waves-light"><i class="ri-add-line label-icon align-middle fs-16"></i> Finalizar Evaluación</button>
-                                        </div>
+                
                                     </div>
                                     <div class="col-sm-auto">
                                         <div class="d-md-flex justify-content-sm-end gap-2">
@@ -183,6 +181,15 @@
                                                                             <div class="col-lg-2 col">
                                                                                 <div class="row text-muted text-center">
                                                                                     <div class="col-12 border-end border-end-dashed">
+                                                                                        <h5 class="mb-1">02-08-2023</h5>
+                                                                                        <p class="text-muted mb-0">Última actualización</p>
+                                                                                    </div>
+                                                                                </div>
+                                                                            </div>
+                    
+                                                                            <div class="col-lg-2 col">
+                                                                                <div class="row text-muted text-center">
+                                                                                    <div class="col-12 border-end border-end-dashed">
                                                                                         <h5 class="mb-1">{{v.total_cuerpos ? v.total_cuerpos : 0}}</h5>
                                                                                         <p class="text-muted mb-0">{{v.total_cuerpos && v.total_cuerpos == 1 ? 'Cuerpo Legal Vinculado' : 'Cuerpos legales Vinculados'}}</p>
                                                                                     </div>
@@ -203,10 +210,6 @@
                                                                                     <div class="progress-bar" [ngClass]="{'bg-danger': v.avance > 0 && v.avance < 25, 'bg-warning': v.avance > 25 && v.avance < 75, 'bg-success': v.avance > 75 }" role="progressbar" [style]="v.avance > 0 ? 'width:'+v.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{v.avance}}%</div>
                                                                                 </div>
                                                                             </div>
-
-                                                                            <div class="col-lg-1 col">
-                                                                                <span class="badge text-bg-danger" [ngClass]="{'bg-success': v.avance > 0, 'bg-danger': v.avance < 1}">{{v.avance > 0 ? 'Evaluado' : 'No evaluado'}}</span>
-                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -218,107 +221,6 @@
                                             </div>
                             </div>
                           </div>
-                        </ng-template>
-                    </li>-->
-                    <li [ngbNavItem]="2">
-                        <a ngbNavLink>
-                          Control
-                        </a>
-                        <ng-template ngbNavContent>
-                          
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    
-                                    <div class="row g-4 mb-3">
-                                        <div class="col-sm">
-                                            <div>
-                                                <button type="button" class="btn btn-success btn-label waves-effect left waves-light"><i class="ri-add-line label-icon align-middle fs-16"><!--ms-2--></i> Crear Evaluación</button>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-auto">
-                                            
-                                        </div>
-                                    </div>
-                                    <!--<div class="card">
-                                        <div class="card-body">-->
-                        
-                                            <!--<div *ngIf="installations_data.length < 1">
-                                                <div style="text-align: center;width: 100%;font-size: 20px;">
-                                                    Aún no tiene Elementos o actividades
-                                                </div>
-                                            </div>-->
-                        
-                                            <div><!--*ngIf="installations_data.length > 0"-->            
-                                                    <div class="list-group">
-                                                        <!--<ng-container *ngFor="let ig of installations_group | filter:term2">-->
-                                          
-                                                            <!--<ng-container *ngFor="let v of ig.instalaciones;">-->
-                        
-                                                            <div class="team-list list-view-filter row">
-                                                                <div class="col">
-                                                                    <div class="card team-box">
-                                                                        <div class="team-cover">
-                                                                            
-                                                                        </div>
-                                                                        <div class="card-body p-4">                
-                                                                            <div class="row align-items-center team-row">
-                                                                                <div class="col team-settings">
-                                                                                    <div class="row">
-                                                                                        <div class="col">
-                                                                                            
-                                                                                        </div>
-                                                                                    </div>
-                                                                                </div>
-                                                                                <div class="col-lg-3 col">
-                                                                                    <div class="row text-muted text-center">
-                                                                                        <div class="col-12 border-end border-end-dashed">
-                                                                                            <h5 class="mb-1">02-08-2023</h5>
-                                                                                            <p class="text-muted mb-0">Inicio</p>
-                                                                                        </div>
-                                                                                    </div>
-                                                                                </div>
-                        
-                                                                                <div class="col-lg-3 col">
-                                                                                    <div class="row text-muted text-center">
-                                                                                        <div class="col-12 border-end border-end-dashed">
-                                                                                            <h5 class="mb-1">20-08-2023</h5>
-                                                                                            <p class="text-muted mb-0">Término</p>
-                                                                                        </div>
-                                                                                    </div>
-                                                                                </div>
-                                                                                
-                                                                                <div class="col-lg-3 col">
-                                                                                    <div class="row text-muted text-center">
-                                                                                        <div class="col-12 border-end border-end-dashed">
-                                                                                            <h5 class="mb-1"><b>Andrea Marin</b></h5>
-                                                                                            <p class="text-muted mb-0">Evaluador/a</p>
-                                                                                        </div>
-                                                                                    </div>
-                                                                                </div>
-    
-                                                                                <div class="col-lg-2 col">
-                                                                                    <div class="progress progress-xl">
-                                                                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                                                                                    </div>
-                                                                                </div>
-    
-                                                                                <div class="col-lg-1 col">
-                                                                                    <span class="badge text-bg-warning">En proceso</span>
-                                                                                </div>
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
-                                                                    <!--end card-->
-                                                                </div>
-                                                            </div>
-                                                            <!--</ng-container>
-                                                        </ng-container>-->
-                                                    </div>
-                                                </div>
-                                            <!--</div>
-                                    </div>-->
-                                </div>
-                              </div>
                         </ng-template>
                     </li>
                   </ul>
