--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -547,7 +547,7 @@
     <div class="col-sm-7">
         <div style="background: #F7B84B; box-shadow: 0px 17px 35px rgba(64, 81, 137, 0.20); border-radius: 2px; overflow: hidden; width: 100%; height: 100%;">
             <div class="col-sm-12">
-                <div class="row mb-3 mt-3">
+                <div class="row mb-3 mt-3 align-items-center team-row">
                     <div class="col-sm-1">
                     </div>
                     <div class="col-sm-7" style="color: white; font-size: 12px; font-family: Poppins; font-weight: 400; line-height: 13.86px; word-wrap: break-word">
@@ -566,7 +566,7 @@
     <div class="col-sm-7">
         <div style="background: #F7B84B; box-shadow: 0px 17px 35px rgba(64, 81, 137, 0.20); border-radius: 2px; overflow: hidden; width: 100%; height: 100%;">
             <div class="col-sm-12">
-                <div class="row mb-3 mt-3">
+                <div class="row mb-3 mt-3 align-items-center team-row">
                     <div class="col-sm-1">
                     </div>
                     <div class="col-sm-7" style="color: white; font-size: 12px; font-family: Poppins; font-weight: 400; line-height: 13.86px; word-wrap: break-word">
@@ -1028,7 +1028,7 @@
     <div class="col-sm-12 mb-3">
         <div style="background: #F7B84B; box-shadow: 0px 17px 35px rgba(64, 81, 137, 0.20); border-radius: 2px; overflow: hidden; width: 100%; height: 100%;">
             <div class="col-sm-12">
-                <div class="row mb-3 mt-3">
+                <div class="row mb-3 mt-3 align-items-center team-row">
                     <div class="col-sm-1">
                     </div>
                     <div class="col-sm-2" style="color: white; font-size: 14px; font-family: Poppins; font-weight: 400; line-height: 13.86px; word-wrap: break-word; margin: auto;">
