--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -49,7 +49,7 @@
             </div>
             
             <div class="col-md-4">
-                <h6>EVALUADOR</h6>
+                <h6>RESPONSABLE</h6>
                 Jorge Torres
             </div>
             
@@ -68,7 +68,7 @@
                     
               <div class="row g-4 mb-3">
                 <div class="col-sm">
-                    <h4 style="color: #405189;"><b>EVALUACIÓN</b></h4>
+                    <h4 style="color: #405189;"><b>CONTROL</b></h4>
                 </div>
                 <div class="col-sm-auto">
                 </div>
