--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -59,20 +59,35 @@
         </div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-header align-items-xl-center d-xl-flex">
+                <div class="flex-grow-1 mb-xl-0">
+                    <h4 style="color: #405189;"><b>{{activeTab == 1 ? 'NUEVA EVALUACIÓN' : 'HISTORIAL DE EVALUACIONES' }}</b></h4>
+                </div>
+                
+                <div class="flex-shrink-0">
+                <ul ngbNav #Header="ngbNav" [activeId]="activeTab" class="nav nav-pills card-header-pills">
+                    <li [ngbNavItem]="1">
+                        <a ngbNavLink (click)="changeTab(1)">
+                          Control
+                        </a>
+                        <ng-template ngbNavContent>
+                            
 <form [formGroup]="evaluacionForm" class="tablelist-form">
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
                     
-              <div class="row g-4 mb-3">
+              <!--<div class="row g-4 mb-3">
                 <div class="col-sm">
                     <h4 style="color: #405189;"><b>CONTROL</b></h4>
                 </div>
                 <div class="col-sm-auto">
                 </div>
-              </div>
+              </div>-->
               
               <div class="row g-0">
                 <div class="col-md-12">
@@ -126,6 +141,76 @@
     </div>
     
     </form>
+                        </ng-template>
+                    </li> 
+                    
+                    <li [ngbNavItem]="2">
+                        <a ngbNavLink (click)="changeTab(2)">
+                          Historial
+                        </a>
+                        <ng-template ngbNavContent>
+
+                            <div class="list-group" *ngIf="evaluations && showData">
+                                <!--<ng-container *ngFor="let ig of installations_group | filter:term2">-->
+                  
+                                    <!--<ng-container *ngFor="let v of ig.instalaciones;">-->
+
+                                    <div class="team-list list-view-filter row" style="cursor:pointer;"> <!--(click)="goEvaluation()"-->
+                                        <div class="col">
+                                            <div class="card team-box">
+                                                <div class="team-cover">
+                                                    
+                                                </div>
+                                                <div class="card-body p-4">                
+                                                    <div class="row align-items-center team-row">
+                                                        <div class="col team-settings">
+                                                            <div class="row">
+                                                                <div class="col">
+                                                                    
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        
+                                                        <div class="col-lg-8 col">
+                                                            <div class="row text-muted text-center">
+                                                                Descripcion de evaluacion
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-lg-2 col">
+                                                            <div class="row text-muted text-center">
+                                                                <div class="col-12 border-end border-end-dashed">
+                                                                    <h5 class="mb-1">{{ evaluations.createdAt | date: 'd/M/yyyy' }}</h5>
+                                                                    <p class="text-muted mb-0">Fecha Evaluación</p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="col-lg-2 col">
+                                                            
+                                                            <span class="badge text-bg-warning" >CUMPLE PARCIAL</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!--</ng-container>
+                                </ng-container>-->
+                            </div>
+                        </ng-template>
+                    </li>
+                </ul>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="tab-content text-muted">
+                  <div [ngbNavOutlet]="Header"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="row"><!-- *ngIf="status == 'NO CUMPLE' || status == 'CUMPLE PARCIALMENTE'"-->
     <div class="col-lg-12">
