--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -50,7 +50,7 @@
             
             <div class="col-md-4">
                 <h6>RESPONSABLE</h6>
-                Jorge Torres
+                {{articulo.evaluations && articulo.evaluations.evaluador ? articulo.evaluations.evaluador.nombre : '-' }}
             </div>
             
           </div>
@@ -94,7 +94,7 @@
                     <div class="card-body">
                         <h6>1. Determina el estado del cumplimiento.</h6>
                         <select class="form-select" style="background-color: #F3F6F9;border: 0.621px solid #F3F6F9;width: 400px;" placeholder="Seleccione Cumplimiento" data-choices data-choices-search-false
-                                    id="choices-priority-input2">
+                                    id="choices-priority-input2" (change)="changeStatus($event)">
                                     <option value="" selected>Seleccione Cumplimiento</option>
                                     <option value="CUMPLE">Cumple</option>
                                     <option value="CUMPLE PARCIALMENTE">Cumple parcial</option>
@@ -130,7 +130,32 @@
                     <div class="col-md-12">
                         <div class="card-body">
                             <h6>4. Carga tu evidencia.</h6>
-                            <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" (success)="onFileSelectedEvaluation($event)"></dropzone>
+                            <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer' }" (success)="onFileSelectedEvaluation($event)"></dropzone>
+                            
+                        <div class="table table-striped files" style="display: none;" id="myPreviewsContainer">
+                        </div>
+                        <div class="table table-striped" *ngIf="imgEvaluations.length > 0">
+                            <ul _ngcontent-eyd-c348="" class="list-unstyled vstack gap-4">
+                                <li _ngcontent-eyd-c348="" style="
+                                border: 1px solid #C6C6C6;
+                                margin-top: 10px;" *ngFor="let im of imgEvaluations; let i = index">
+                                    <div _ngcontent-eyd-c348="" class="d-flex align-items-center">
+                                        <div _ngcontent-eyd-c348="" class="flex-shrink-0">
+                                            <div _ngcontent-eyd-c348="" class="avatar-xs">
+                                                <div _ngcontent-eyd-c348="" class="avatar-title">
+                                                    <img src="{{im.imagen}}" width="32" height="32" style="width: 32px; height: 32px;" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div _ngcontent-eyd-c348="" class="flex-grow-1 ms-3">
+                                            <h5 _ngcontent-eyd-c348="" class="mb-1 fs-15">{{im.name}}</h5>
+                                            <p _ngcontent-eyd-c348="" class="mb-0 fs-12 text-muted">{{im.size}}</p>
+                                        </div>
+                                        <button class="btn btn-danger edit-item-btn d-sm-flex align-items-center justify-content-end" (click)="deleteEvaluationImg(i)">Quitar</button>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -138,6 +163,13 @@
             </div>
         </div>
     </div>
+    </div>
+        
+    <div class="row">
+        <div class="col-12">
+            <button class="btn btn-primary edit-item-btn d-sm-flex align-items-center justify-content-end" style="float:right;" (click)="saveEvaluation()"
+            >Guardar</button>
+        </div>
     </div>
     
     </form>
@@ -150,12 +182,12 @@
                         </a>
                         <ng-template ngbNavContent>
 
-                            <div class="list-group" *ngIf="evaluations && showData">
+                            <div class="list-group" *ngIf="!showDetailEvaluation"><!-- *ngIf="hallazgos.lenght > 0"-->
                                 <!--<ng-container *ngFor="let ig of installations_group | filter:term2">-->
                   
-                                    <!--<ng-container *ngFor="let v of ig.instalaciones;">-->
+                                    <ng-container *ngFor="let h of hallazgos;">
 
-                                    <div class="team-list list-view-filter row" style="cursor:pointer;"> <!--(click)="goEvaluation()"-->
+                                    <div class="team-list list-view-filter row" style="cursor:pointer;" (click)="viewEvaluation(h)"> 
                                         <div class="col">
                                             <div class="card team-box">
                                                 <div class="team-cover">
@@ -173,14 +205,14 @@
                                                         
                                                         <div class="col-lg-8 col">
                                                             <div class="row text-muted text-center">
-                                                                Descripcion de evaluacion
+                                                                {{h.comentario}}
                                                             </div>
                                                         </div>
 
                                                         <div class="col-lg-2 col">
                                                             <div class="row text-muted text-center">
                                                                 <div class="col-12 border-end border-end-dashed">
-                                                                    <h5 class="mb-1">{{ evaluations.createdAt | date: 'd/M/yyyy' }}</h5>
+                                                                    <h5 class="mb-1">{{ h.fecha_evaluacion | date: 'd/M/yyyy' }}</h5>
                                                                     <p class="text-muted mb-0">Fecha Evaluación</p>
                                                                 </div>
                                                             </div>
@@ -188,16 +220,64 @@
 
                                                         <div class="col-lg-2 col">
                                                             
-                                                            <span class="badge text-bg-warning" >CUMPLE PARCIAL</span>
+                                                            <span class="badge" [ngClass]="{'text-bg-danger': h.estado  == 'NO CUMPLE', 'text-bg-success': h.estado == 'CUMPLE', 'text-bg-warning': h.estado == 'CUMPLE PARCIALMENTE'}">{{ h.estado ? h.estado : 'NO EVALUADO' }}</span>
+
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <!--</ng-container>
-                                </ng-container>-->
+                                   </ng-container>
+                                 <!--</ng-container>-->
                             </div>
+                            <div *ngIf="showDetailEvaluation">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <div class="card">
+                                        <div class="card-body">
+                                                
+                                          <div class="row g-0 mb-3">
+                                            <div class="col-md-6">
+                                                    <h6 style="color: #405189;"><b>ESTADO</b></h6>
+                                                    
+                                                    <div class="col-lg-2 col">
+                                                        <span class="badge" [ngClass]="{'text-bg-danger': evaluationDetail.estado  == 'NO CUMPLE', 'text-bg-success': evaluationDetail.estado == 'CUMPLE', 'text-bg-warning': evaluationDetail.estado == 'CUMPLE PARCIALMENTE'}">{{ evaluationDetail.estado ? evaluationDetail.estado  : 'NO EVALUADO' }}</span>
+                                                    </div>
+                                            </div>
+                                            
+                                            <div class="col-md-6">
+                                                <h6 style="color: #405189;"><b>FECHA EVALUACIÓN</b></h6>
+                                                {{evaluationDetail.fecha_evaluacion ? (evaluationDetail.fecha_evaluacion | date:"dd-MM-yy" ) : '-' }}
+                                            </div>
+                                            </div>
+                                
+                                            <div class="row g-0 mb-3">
+                                                <div class="col-md-6">
+                                                        <h6 style="color: #405189;"><b>EVIDENCIA CARGADA</b></h6>
+                                                        <img [src]="evaluationDetail.evaluacionImg[0]" (error)="imgError($event)" alt="Hallazgo respaldo"
+                                                                            class="users-avatar-shadow avatar mr-3" height="64" width="64">
+                                                </div>
+                                                
+                                                <div class="col-md-6">
+                                                    <h6 style="color: #405189;"><b>COMENTARIO</b></h6>                    
+                                                    <p>{{evaluationDetail.comentario ? evaluationDetail.comentario : ''}}</p>
+                                                </div>
+                                                </div>
+                                
+                                        </div>
+                                        </div>
+                                    </div>
+                            </div>
+                            
+                            <div class="row">
+                                <div class="col-12">
+                                    <button class="btn btn-primary edit-item-btn d-sm-flex align-items-center justify-content-end" style="float:right;" (click)="hideDetailEvaluation()"
+                                    >Volver</button>
+                                </div>
+                            </div>
+                            </div>
+
                         </ng-template>
                     </li>
                 </ul>
@@ -633,9 +713,40 @@ sistema.</p>
             </div>
 
             <div class="mb-3">
-                <label for="area-field" class="form-label">Descripción</label>
-                <textarea class="form-control" id="nombreHallazgo" formControlName="nombre" placeholder="Descripción del Hallazgo" rows="3"></textarea>
+                <label for="area-field" class="form-label"><h6>1. Describe el Hallazgo.</h6></label>
+                <ckeditor [editor]="Editor" data="" formControlName="nombre"></ckeditor>
+                <!--<textarea class="form-control" id="nombreHallazgo" formControlName="nombre" placeholder="Descripción del Hallazgo" rows="3"></textarea>-->
                 <div class="invalid-feedback">Por favor ingresar descripción.</div>
+            </div>
+
+            <div class="mb-3">
+                <label for="area-field" class="form-label"><h6>2. Carga evidencia.</h6></label>
+                <dropzone class="dropzone_sec" [message]="'Haz Click o arrastra la imagen a cargar'" [config]="{ previewsContainer: '#myPreviewsContainer2' }" (success)="onFileSelected($event)">
+                </dropzone>
+                <div class="table table-striped files" style="display: none;" id="myPreviewsContainer2">
+                </div>
+                <div class="table table-striped" *ngIf="imgHallazgos.name">
+                    <ul _ngcontent-eyd-c348="" class="list-unstyled vstack gap-4">
+                        <li _ngcontent-eyd-c348="" style="
+                        border: 1px solid #C6C6C6;
+                        margin-top: 10px;">
+                            <div _ngcontent-eyd-c348="" class="d-flex align-items-center">
+                                <div _ngcontent-eyd-c348="" class="flex-shrink-0">
+                                    <div _ngcontent-eyd-c348="" class="avatar-xs">
+                                        <div _ngcontent-eyd-c348="" class="avatar-title">
+                                            <img src="{{imgHallazgos.imagen}}" width="32" height="32" style="width: 32px; height: 32px;" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div _ngcontent-eyd-c348="" class="flex-grow-1 ms-3">
+                                    <h5 _ngcontent-eyd-c348="" class="mb-1 fs-15">{{imgHallazgos.name}}</h5>
+                                    <p _ngcontent-eyd-c348="" class="mb-0 fs-12 text-muted">{{imgHallazgos.size}}</p>
+                                </div>
+                                <button class="btn btn-danger edit-item-btn d-sm-flex align-items-center justify-content-end" (click)="deleteHallazgoImg()">Quitar</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
         </div>
