alto de tabla hallazgos y validacion evaluacion terminada

--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -50,7 +50,7 @@
                           
                                             <!--<ng-container *ngFor="let v of ig.instalaciones;">-->
         
-                                            <div class="team-list list-view-filter row" style="cursor:pointer;" (click)="goEvaluation()">
+                                            <div class="team-list list-view-filter row" style="cursor:pointer;" (click)="goEvaluation(evaluations.fechaFinalizacion)">
                                                 <div class="col">
                                                     <div class="card team-box">
                                                         <div class="team-cover">
