--- a/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
+++ b/src/app/pages/projects/create/evaluation/task-control/task-control.component.html
@@ -320,7 +320,7 @@
             </div>
         </div>
           
-        <div class="todo-content position-relative px-4 mx-n4" id="todo-content">
+        <div class="todo-content position-relative px-4 mx-n4" style="height: auto;" id="todo-content">
             <div class="todo-task" id="todo-task">
                 <div class="table-responsive mt-3 mb-1"><!--table-card-->
                     <table mat-table #dataTable [dataSource]="HallazgosDatas | filter:term"
