editar una evaluacion ya creada

--- a/src/app/pages/projects/create/evaluation/task/task.component.html
+++ b/src/app/pages/projects/create/evaluation/task/task.component.html
@@ -231,6 +231,13 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-12">
+        <button class="btn btn-primary edit-item-btn d-sm-flex align-items-center justify-content-end" style="float:right;" (click)="editEvaluation()"
+        >Guardar</button>
+    </div>
+</div>
+
 <!-- Add Hallazgo -->
 <ng-template #content role="document" let-modal>
     <div class="modal-header bg-light p-3">
